--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -43,35 +43,39 @@ body
 
 #start
 {
+    --width: 75%;
+    --height: 4vw;
+
     grid-column: 2 / 3;
     grid-row: 3 / 4;
-    width: 75%;
-    height: 4vw;
+    width: var(--width);
+    height: var(--height);
     margin: auto;
+    margin-top: 0;
     border: none;
     border-radius: 5px;
     box-shadow: var(--shadow);
     font-size: 2vw;
-    transition: width var(--transTime), height var(--transTime), top var(--transTime);
+    transition: width var(--transTime), height var(--transTime), margin-top var(--transTime);
 }
 
 #start:hover
 {
+    width: calc(var(--width) + 1vw);
+    height: calc(var(--height) + 1vh);
+    margin-top: -.5vh;
     box-shadow: var(--shadowHover);
     cursor: pointer;
+}
+
+#start:active
+{
+    width: calc(var(--width) - 1vw);
+    height: calc(var(--height) - 1vh);
+    margin-top: .5vh;
 }
 
 #start:focus
 {
     outline: none;
-}
-
-#start:active
-{
-    position: absolute;
-    left: 0;
-    top: 0;
-
-    width: 100vw;
-    height: 100vh;
 }
