--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -7,7 +7,7 @@
 body
 {
     grid-template-columns: var(--colSize) var(--colSize) var(--colSize);
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto 10vh;
 }
 
 .wall
@@ -44,7 +44,7 @@ body
 #start
 {
     --width: 75%;
-    --height: 4vw;
+    --height: 6vh;
 
     grid-column: 2 / 3;
     grid-row: 3 / 4;
