--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -2,6 +2,7 @@
 {
     --space: 10px;
     --shadow: 5px 5px 5px 0 hsla(0,0%,0%,0.2);
+    --shadowHover: .2em .2em .8em .2em hsla(0,0%,0%,0.2);
     --transTime: .1s;
 }
 
@@ -19,4 +20,26 @@ div
 {
     border-radius: 5px;
     box-shadow: var(--shadow);
+}
+
+.btn
+{
+    background-color: white;
+    margin: auto;
+    margin-top: 0;
+    border: none;
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    transition: width var(--transTime), height var(--transTime), margin-top var(--transTime), margin-bottom var(--transTime);
+}
+
+.btn:hover
+{
+    box-shadow: var(--shadowHover);
+    cursor: pointer;
+}
+
+.btn:focus
+{
+    outline: none;
 }
