--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -4,12 +4,15 @@
     --shadow: 5px 5px 5px 0 hsla(0,0%,0%,0.2);
     --shadowHover: .2em .2em .8em .2em hsla(0,0%,0%,0.2);
     --transTime: .1s;
+    --backColor: #1e1e1e;
+    --topColor: #e9e9e9;
+    --l1Color: #e9e9e91a;
 }
 
 body
 {
-    color: white;
-    background-color: #1e1e1e;
+    color: var(--topColor);
+    background-color: var(--backColor);
     margin: var(--space);
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
@@ -24,7 +27,7 @@ div
 
 .btn
 {
-    background-color: white;
+    background-color: var(--topColor);
     margin: auto;
     margin-top: 0;
     border: none;
