--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -13,10 +13,16 @@ body
 {
     color: var(--topColor);
     background-color: var(--backColor);
-    margin: var(--space);
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
     grid-gap: var(--space);
+}
+
+iframe
+{
+    width: 100%;
+    height: 95vh;
+    border: 0;
 }
 
 div
