--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -14,15 +14,12 @@ body
     color: var(--topColor);
     background-color: var(--backColor);
     font-family: Arial, Helvetica, sans-serif;
-    display: grid;
-    grid-gap: var(--space);
 }
 
-iframe
+page
 {
-    width: 100%;
-    height: 95vh;
-    border: 0;
+    display: grid;
+    grid-gap: var(--space);
 }
 
 div
