--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -49,3 +49,22 @@ div
 {
     outline: none;
 }
+
+.inputTxt
+{
+    margin: var(--space);
+    margin-top: calc(2 * var(--space));
+    margin-bottom: calc(2 * var(--space));
+    padding: var(--space);
+    border: none;
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    transition: height var(--transTime), margin-top var(--transTime), margin-bottom var(--transTime);
+}
+
+.inputTxt:focus
+{
+    outline: none;
+    margin-top: calc(1.5 * var(--space));
+    margin-bottom: calc(1.5 * var(--space));
+}
