--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -22,7 +22,7 @@ page
     grid-gap: var(--space);
 }
 
-box
+.box
 {
     border-radius: 5px;
     box-shadow: var(--shadow);
@@ -52,8 +52,8 @@ box
 
 .btn2
 {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     background-color: var(--topColor);
     border: none;
     border-radius: 100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000px;
