--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -30,6 +30,11 @@
     grid-column: 1 / 2;
 }
 
+#lobby #players:nth-child(n+3)
+{
+    background-color: blue;
+}
+
 #lobby #players div
 {
     background-color: #FF0000;
