--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -30,31 +30,26 @@
     grid-column: 1 / 2;
 }
 
-#lobby #players:nth-child(n+3)
-{
-    background-color: blue;
-}
-
-#lobby #players div
+#lobby #players #teams
 {
     background-color: #FF0000;
     margin: var(--space);
 }
 
-#lobby #players div h3
+#lobby #players #teams h3
 {
     text-align: center;
     padding: var(--space);
 }
 
-#lobby #players ul li
+#lobby #players #teams ul li
 {
     display: grid;
     grid-template-columns: auto auto;
     margin: var(--space);
 }
 
-#lobby #players ul li div:nth-child(2)
+#lobby #players #teams ul li div:nth-child(2)
 {
     grid-column: 2 / 3;
 }
