lobby functionally almost done

--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -91,9 +91,9 @@ page
     margin-bottom: calc(1.5 * var(--space));
 }
 
-#debugWarning{
+#debugWarning
+{
     background-color:var(--l1Color);
     font-size: 40px;
     color: red;
-    display:none;
 }
