--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -30,33 +30,47 @@
     grid-column: 1 / 2;
 }
 
-#lobby #players #teams
+#lobby #teams > li
 {
-    /* background-color: #FF0000; */
+    background-color: var(--topColor);
     margin: var(--space);
 }
 
-#lobby #players #teams h3
+#lobby #teams li:first-child
+{
+    color: var(--backColor);
+}
+
+#lobby #teams h3
 {
     text-align: center;
     padding: var(--space);
 }
 
-#lobby #players #teams ul li
+#lobby #teams ul li
 {
     display: grid;
     grid-template-columns: auto auto;
-    margin: var(--space);
+    padding: var(--space);
 }
 
-#lobby #players #teams ul li div:nth-child(2)
+#lobby #teams ul li div:nth-child(2)
 {
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
+    margin-left: var(--space);
+    font-size: 18px;
+    line-height: calc(var(--btn2Size) + 2 * var(--space));
+}
+
+#lobby #teams ul li div:nth-child(3)
+{
+    text-align: right;
 }
 
 #lobby #options
 {
     grid-column: 3 / 4;
+    font-size: 18px;
 }
 
 #lobby #options ul
@@ -64,6 +78,22 @@
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
+    padding: var(--space);
+}
+
+#lobby #options ul li
+{
+    line-height: calc(var(--btn2Size) + 2 * var(--space));
+}
+
+#lobby #options ul li:nth-child(odd)
+{
+    margin-left: var(--space);
+}
+
+#lobby #options ul li:nth-child(even)
+{
+    text-align: right;
 }
 
 #lobby #logo
