--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -7,6 +7,7 @@
     --backColor: #1e1e1e;
     --topColor: #e9e9e9;
     --l1Color: #e9e9e91a;
+    --btn2Size: 35px;
 }
 
 body
@@ -20,6 +21,11 @@ page
 {
     display: grid;
     grid-gap: var(--space);
+}
+
+ul
+{
+    padding: 0;
 }
 
 .box
@@ -52,8 +58,9 @@ page
 
 .btn2
 {
-    width: 35px;
-    height: 35px;
+    width: var(--btn2Size);
+    height: var(--btn2Size);
+    margin: var(--space);
     background-color: var(--topColor);
     border: none;
     border-radius: 100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000px;
