--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -58,6 +58,7 @@ ul
 
 .btn2
 {
+    font-size: 16px;
     width: var(--btn2Size);
     height: var(--btn2Size);
     margin: var(--space);
@@ -96,6 +97,11 @@ ul
     outline: none;
     margin-top: calc(1.5 * var(--space));
     margin-bottom: calc(1.5 * var(--space));
+}
+
+.owner
+{
+    display: none;
 }
 
 #debugWarning
