--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -5,7 +5,7 @@
 
     display: none;
     grid-template-columns: var(--colSize) var(--colSize) var(--colSize);
-    grid-template-rows: auto auto 15vh;
+    grid-template-rows: 50vh 25vh 15vh;
     margin: var(--space);
 }
 
@@ -99,6 +99,8 @@
 #lobby #logo
 {
     width: 100%;
+    max-width: 50vh;
+    margin: auto;
 }
 
 #lobby #name
@@ -106,6 +108,7 @@
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     margin: auto;
+    margin-top: 0;
 }
 
 #lobby #name p
@@ -158,7 +161,7 @@
     border: none;
     border-radius: 5px;
     box-shadow: var(--shadow);
-    font-size: 2vw;
+    font-size: 30px;
     transition: width var(--transTime), height var(--transTime), margin-top var(--transTime);
 }
 
