--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -94,7 +94,7 @@
 {
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto auto;
     padding: var(--space);
 }
 
@@ -248,6 +248,12 @@
 #lobby #options #wordsField
 {
     text-align: center;
+    width: calc(100% - 2 * var(--space));
+    margin-left: 0;
+}
+
+#lobby #options #wordsField:focus
+{
 }
 
 #lobby #logo
