--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -76,8 +76,8 @@
 {
     font-size: 16px;
     margin: var(--space);
-    padding-left: 7px;
-    padding-right: 7px;
+    /* padding-left: 7px;
+    padding-right: 7px; */
     line-height: calc(var(--btn2Size) + 2 * var(--space));
     display: inline;
 }
