--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -1,13 +1,20 @@
 #game
 {
-
+    display: none;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 50vh 20vh 10vh 10vh;
+    margin: var(--space);
 }
 
 #game > #board
 {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+
     background-color: var(--l1Color);
     width: 100%;
     border-spacing: var(--space);
+    table-layout: fixed;
 }
 
 #game > #board > tr > td
