--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -2,8 +2,20 @@
 {
     display: none;
     grid-template-columns: 20% 80%;
-    grid-template-rows: 50vh 20vh 10vh 10vh;
+    grid-template-rows: 10vh 70vh 10vh;
     margin: var(--space);
+}
+
+#game > #gamePlayers
+{
+    grid-row: 1 / 4;
+    grid-column: 1 / 2;
+}
+
+#game > #info
+{
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
 }
 
 #game > #board
@@ -13,6 +25,7 @@
 
     background-color: var(--l1Color);
     width: 100%;
+    height: 100%;
     border-spacing: var(--space);
     table-layout: fixed;
 }
@@ -25,4 +38,10 @@
     padding: var(--space);
     text-align: center;
     font-size: 24px;
+}
+
+#game > #word
+{
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
 }
