word mark border

--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -38,6 +38,8 @@
     padding: var(--space);
     text-align: center;
     font-size: 24px;
+    box-sizing: border-box;
+    transition: border var(--transTime);
 }
 
 #game > #word
