--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -39,7 +39,7 @@
     text-align: center;
     font-size: 24px;
     box-sizing: border-box;
-    transition: border var(--transTime);
+    transition: all var(--transTime);
 }
 
 #game > #word
