--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -104,10 +104,10 @@
     grid-column: 2 / 3;
 
     display: grid;
-    grid-template-columns: auto calc(var(--btn2Size) + 2 * var(--space));
+    grid-template-columns: auto 20% calc(var(--btn2Size) + 2 * var(--space));
 }
 
-#game > #word > form > .inputTxt
+#game > #word > form > .wordField
 {
     grid-column: 1 / 2;
 
@@ -115,10 +115,26 @@
     margin-bottom: auto;
 }
 
-#game > #word > form > .btn2
+#game > #word > form > .countField
 {
     grid-column: 2 / 3;
 
     margin-top: auto;
     margin-bottom: auto;
+}
+
+#game > #word > form > .btn2
+{
+    grid-column: 3 / 4;
+
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#game > #word > div
+{
+    grid-column: 2 / 3;
+
+    margin: auto;
+    font-size: 24px;
 }
