--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -16,6 +16,12 @@
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     margin-right: var(--space);
+    margin-top: var(--space);
+}
+
+#game > .playerlist .btnWrap > .smIcon *
+{
+    transform: translate(calc(2 * var(--space)), var(--space));
 }
 
 #game > .playerlist .btn2
