lobbybtn and words

--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -52,7 +52,7 @@
 
 #game > #info > #backToLobbyBtn
 {
-    display: flex;
+    display: none;
     color: var(--backColor);
     margin: var(--space);
     padding: var(--space);
