textarea for guests as wordsfield

--- a/Front-end/css/lobby.css
+++ b/Front-end/css/lobby.css
@@ -265,8 +265,14 @@
 
 #lobby #options #wordsTxt
 {
-    margin-top: var(--space);
+    resize: vertical;
+    text-align: center;
+    width: calc(100% - 2 * var(--space));
+    height: 100%;
+    min-height: 40px;
+    margin-left: 0;
     background-color: var(--l1Color);
+    color: var(--topcolor);
 }
 
 #lobby #logo
